# AOC-2024

./: .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  compile_commands.json
day0/: main.cpp
resources/fonts/: pix.fnt  pix36.fnt
utilsraylib/: CMakeLists.txt
utilsraylib/includes/: engineDefinitions.hpp  utils.hpp  virtualResWindow.hpp
utilsraylib/src/: utils.cpp  virtualResWindow.cpp
